{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 154,
  "lineage": "45192ef4-e5f0-4461-ebff-a7e44253ae18",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0025c6683f0563ee0",
            "arn": "arn:aws:ec2:us-east-1:552026064877:elastic-ip/eipalloc-0025c6683f0563ee0",
            "association_id": "eipassoc-087fa792c00f49c4f",
            "domain": "vpc",
            "id": "eipalloc-0025c6683f0563ee0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a1a5faeed227aff2",
            "private_dns": "ip-10-0-0-113.ec2.internal",
            "private_ip": "10.0.0.113",
            "public_dns": "ec2-34-226-57-195.compute-1.amazonaws.com",
            "public_ip": "34.226.57.195",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat_gateway_eip"
            },
            "tags_all": {
              "Name": "nat_gateway_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ae8f15ae66fe8cda",
            "arn": "arn:aws:ec2:us-east-1:552026064877:instance/i-0b44673672b05f2e6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "server_profile",
            "id": "i-0b44673672b05f2e6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "skillec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01800d65552860a46",
            "private_dns": "ip-10-0-3-175.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.175",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:552026064877:key/6e2faec1-6862-4e12-a656-0214a934a77f",
                "throughput": 125,
                "volume_id": "vol-0960b1e136137d678",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0355388e7afa46501",
            "tags": {
              "Name": "app-server"
            },
            "tags_all": {
              "Name": "app-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0508352e83c9c3513"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.server_profile",
            "aws_iam_role.server_role",
            "aws_security_group.web-app-security-group",
            "aws_security_group.web-elb-security-group",
            "aws_subnet.app-private-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ae8f15ae66fe8cda",
            "arn": "arn:aws:ec2:us-east-1:552026064877:instance/i-0018a9ef3574d88b0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "server_profile",
            "id": "i-0018a9ef3574d88b0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "skillec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0896530686f911756",
            "private_dns": "ip-10-0-1-119.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.119",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:552026064877:key/6e2faec1-6862-4e12-a656-0214a934a77f",
                "throughput": 125,
                "volume_id": "vol-040275489d502382e",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6430377bc068670",
            "tags": {
              "Name": "web-server"
            },
            "tags_all": {
              "Name": "web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0508352e83c9c3513"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.server_profile",
            "aws_iam_role.server_role",
            "aws_security_group.web-app-security-group",
            "aws_security_group.web-elb-security-group",
            "aws_subnet.web-private-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:552026064877:internet-gateway/igw-04d516401c26bd900",
            "id": "igw-04d516401c26bd900",
            "owner_id": "552026064877",
            "tags": {
              "Name": "internet_gateway"
            },
            "tags_all": {
              "Name": "internet_gateway"
            },
            "vpc_id": "vpc-069201147f8cb40b7"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0025c6683f0563ee0",
            "association_id": "eipassoc-087fa792c00f49c4f",
            "connectivity_type": "public",
            "id": "nat-0215be07f08895665",
            "network_interface_id": "eni-0a1a5faeed227aff2",
            "private_ip": "10.0.0.113",
            "public_ip": "34.226.57.195",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02833daec8a0af03e",
            "tags": {
              "Name": "nat_gateway"
            },
            "tags_all": {
              "Name": "nat_gateway"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "app_private_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:552026064877:network-acl/acl-015d814aad2a3d057",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-015d814aad2a3d057",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "552026064877",
            "subnet_ids": [
              "subnet-02d68072314dba16b",
              "subnet-0355388e7afa46501"
            ],
            "tags": {
              "Name": "bootcamp-app-private-nacl"
            },
            "tags_all": {
              "Name": "bootcamp-app-private-nacl"
            },
            "vpc_id": "vpc-069201147f8cb40b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.app-private-a",
            "aws_subnet.app-private-b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "bastion-public-nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:552026064877:network-acl/acl-0cadb2ce1d18d15b7",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0cadb2ce1d18d15b7",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "552026064877",
            "subnet_ids": [
              "subnet-0543ce905a657d8d9"
            ],
            "tags": {
              "Name": "bootcamp-bastion-public-nacl"
            },
            "tags_all": {
              "Name": "bootcamp-bastion-public-nacl"
            },
            "vpc_id": "vpc-069201147f8cb40b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.bastion-public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "nacl_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:552026064877:network-acl/acl-0298aa9d7215c1a85",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0298aa9d7215c1a85",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "552026064877",
            "subnet_ids": [
              "subnet-02833daec8a0af03e"
            ],
            "tags": {
              "Name": "bootcamp-public-nacl"
            },
            "tags_all": {
              "Name": "bootcamp-public-nacl"
            },
            "vpc_id": "vpc-069201147f8cb40b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "web_private_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:552026064877:network-acl/acl-06d3efaaa9a93dc50",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-06d3efaaa9a93dc50",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "552026064877",
            "subnet_ids": [
              "subnet-0a6430377bc068670",
              "subnet-0b4758ea00e2546b4"
            ],
            "tags": {
              "Name": "bootcamp-web-private-nacl"
            },
            "tags_all": {
              "Name": "bootcamp-web-private-nacl"
            },
            "vpc_id": "vpc-069201147f8cb40b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.web-private-a",
            "aws_subnet.web-private-b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app-private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:552026064877:route-table/rtb-029d4a00a3441e37b",
            "id": "rtb-029d4a00a3441e37b",
            "owner_id": "552026064877",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0215be07f08895665",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bootcamp-app-private-route-table"
            },
            "tags_all": {
              "Name": "bootcamp-app-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-069201147f8cb40b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat_a",
            "aws_subnet.public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bastion-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:552026064877:route-table/rtb-00d0ea2cd89ebd2dd",
            "id": "rtb-00d0ea2cd89ebd2dd",
            "owner_id": "552026064877",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04d516401c26bd900",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bootcamp-bastion-public-route-table"
            },
            "tags_all": {
              "Name": "bootcamp-bastion-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-069201147f8cb40b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:552026064877:route-table/rtb-03067ba6265178018",
            "id": "rtb-03067ba6265178018",
            "owner_id": "552026064877",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04d516401c26bd900",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bootcamp-public-route-table"
            },
            "tags_all": {
              "Name": "bootcamp-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-069201147f8cb40b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:552026064877:route-table/rtb-02c6d25a440efe5f9",
            "id": "rtb-02c6d25a440efe5f9",
            "owner_id": "552026064877",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0215be07f08895665",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bootcamp-web-private-route-table"
            },
            "tags_all": {
              "Name": "bootcamp-web-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-069201147f8cb40b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat_a",
            "aws_subnet.public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app-private-subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e796da9a21ce5657",
            "route_table_id": "rtb-029d4a00a3441e37b",
            "subnet_id": "subnet-0355388e7afa46501"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat_a",
            "aws_route_table.app-private-route-table",
            "aws_subnet.app-private-a",
            "aws_subnet.public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app-private-subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0147f662101c33e1d",
            "route_table_id": "rtb-029d4a00a3441e37b",
            "subnet_id": "subnet-02d68072314dba16b"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat_a",
            "aws_route_table.app-private-route-table",
            "aws_subnet.app-private-b",
            "aws_subnet.public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bastion-subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bffa2318ed0f9eaa",
            "route_table_id": "rtb-00d0ea2cd89ebd2dd",
            "subnet_id": "subnet-0543ce905a657d8d9"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.bastion-public-route-table",
            "aws_subnet.bastion-public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0289636f4fc5d97ab",
            "route_table_id": "rtb-03067ba6265178018",
            "subnet_id": "subnet-02833daec8a0af03e"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public-route-table",
            "aws_subnet.public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-private-subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cc9985e0d95ebf1",
            "route_table_id": "rtb-02c6d25a440efe5f9",
            "subnet_id": "subnet-0a6430377bc068670"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat_a",
            "aws_route_table.web-private-route-table",
            "aws_subnet.public-a",
            "aws_subnet.web-private-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-private-subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9201c6224ab3a1a",
            "route_table_id": "rtb-02c6d25a440efe5f9",
            "subnet_id": "subnet-0b4758ea00e2546b4"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat_a",
            "aws_route_table.web-private-route-table",
            "aws_subnet.public-a",
            "aws_subnet.web-private-b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:552026064877:security-group/sg-06acfc1886e6580ef",
            "description": "Allowing Inbound Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing All Traffic Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06acfc1886e6580ef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing port 22 Inbound",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bootcamp-bastion-public-security-group",
            "name_prefix": "",
            "owner_id": "552026064877",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-public-security-group"
            },
            "tags_all": {
              "Name": "bastion-public-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-069201147f8cb40b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-app-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:552026064877:security-group/sg-0508352e83c9c3513",
            "description": "Allowing Web and App Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing All Traffic Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0508352e83c9c3513",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing port 22 Inbound",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allowing port 443 Inbound",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fc37929504ca62f5"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allowing port 80 Inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fc37929504ca62f5"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bootcamp-web-app-private-security-group",
            "name_prefix": "",
            "owner_id": "552026064877",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bootcamp-web-private-security-group"
            },
            "tags_all": {
              "Name": "bootcamp-web-private-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-069201147f8cb40b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web-elb-security-group",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-elb-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:552026064877:security-group/sg-0fc37929504ca62f5",
            "description": "Allowing Web Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing All Traffic Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fc37929504ca62f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing port 443 Inbound",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing port 80 Inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bootcamp-web-elb-public-security-group",
            "name_prefix": "",
            "owner_id": "552026064877",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bootcamp-web-elb-public-security-group"
            },
            "tags_all": {
              "Name": "bootcamp-web-elb-public-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-069201147f8cb40b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:552026064877:subnet/subnet-0355388e7afa46501",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0355388e7afa46501",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "552026064877",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bootcamp-app-private-subnetA"
            },
            "tags_all": {
              "Name": "bootcamp-app-private-subnetA"
            },
            "vpc_id": "vpc-069201147f8cb40b7"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:552026064877:subnet/subnet-02d68072314dba16b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d68072314dba16b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "552026064877",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bootcamp-app-private-subnetB"
            },
            "tags_all": {
              "Name": "bootcamp-app-private-subnetB"
            },
            "vpc_id": "vpc-069201147f8cb40b7"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bastion-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:552026064877:subnet/subnet-0543ce905a657d8d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0543ce905a657d8d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "552026064877",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bootcamp-bastion-public-subnetA"
            },
            "tags_all": {
              "Name": "bootcamp-bastion-public-subnetA"
            },
            "vpc_id": "vpc-069201147f8cb40b7"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:552026064877:subnet/subnet-02833daec8a0af03e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02833daec8a0af03e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "552026064877",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bootcamp-public-subnetA"
            },
            "tags_all": {
              "Name": "bootcamp-public-subnetA"
            },
            "vpc_id": "vpc-069201147f8cb40b7"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:552026064877:subnet/subnet-0a6430377bc068670",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6430377bc068670",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "552026064877",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bootcamp-web-private-subnetA"
            },
            "tags_all": {
              "Name": "bootcamp-web-private-subnetA"
            },
            "vpc_id": "vpc-069201147f8cb40b7"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:552026064877:subnet/subnet-0b4758ea00e2546b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4758ea00e2546b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "552026064877",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bootcamp-web-private-subnetB"
            },
            "tags_all": {
              "Name": "bootcamp-web-private-subnetB"
            },
            "vpc_id": "vpc-069201147f8cb40b7"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:552026064877:vpc/vpc-069201147f8cb40b7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0868ec8e81167aa30",
            "default_route_table_id": "rtb-0649f18ebbf3fe259",
            "default_security_group_id": "sg-050ad162ef0292172",
            "dhcp_options_id": "dopt-d27790a8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-069201147f8cb40b7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0649f18ebbf3fe259",
            "owner_id": "552026064877",
            "tags": {
              "Name": "bootcamp_vpc"
            },
            "tags_all": {
              "Name": "bootcamp_vpc"
            }
          }
        }
      ]
    }
  ]
}